--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -54,7 +54,7 @@ jobs:
             npm run build:android
 
         - name: Build (iOS)
-          if: matrix.os == 'ubuntu-latest'
+          if: matrix.os == 'macos-latest'
           working-directory: ./cordova
           run: |
             npm run install:ios
