--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -43,13 +43,16 @@ jobs:
             node-version: 20
 
         - name: Setup
-          working-directory: ./cordova
-          run: npm ci
+          # working-directory: ./cordova
+          run: |
+            cd cordova
+            npm ci
 
         - name: Build (Android)
           if: matrix.os == 'ubuntu-latest'
-          working-directory: ./cordova
+          # working-directory: ./cordova
           run: |
+            cd cordova
             npm run install:android
             npm run build:android
 
@@ -57,6 +60,7 @@ jobs:
           if: matrix.os == 'macos-latest'
           working-directory: ./cordova
           run: |
+            cd cordova
             npm run install:ios
             npm run build:ios
 
