--- a/cordova/package.json
+++ b/cordova/package.json
@@ -60,7 +60,7 @@
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "install:android": "rm -rf ./plugins && ./scripts/create-config-from-template.sh prod android && cordova platform add android",
+    "install:android": "./scripts/create-config-from-template.sh prod android && cordova platform add android",
     "install:ios": "rm -rf ./plugins && ./scripts/create-config-from-template.sh prod ios && cordova platform add ios",
     "remove:android": "cordova platform rm android",
     "remove:ios": "cordova platform rm ios",
