--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -54,6 +54,7 @@ jobs:
           if: matrix.os == 'ubuntu-latest'
           # working-directory: ./cordova
           run: |
+            cd cordova
             npm run install:android
             npm run build:android
 
@@ -61,6 +62,7 @@ jobs:
           if: matrix.os == 'macos-latest'
           # working-directory: ./cordova
           run: |
+            cd cordova
             npm run install:ios
             npm run build:ios
 
