--- a/cordova/package.json
+++ b/cordova/package.json
@@ -60,8 +60,8 @@
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "install:android": "rm -rf ./plugins && ./scripts/create-config-from-template.sh prod android && cordova platform add android",
-    "install:ios": "rm -rf ./plugins && ./scripts/create-config-from-template.sh prod ios && cordova platform add ios",
+    "install:android": "rm -rf ./plugins && ./scripts/create-config-from-template.sh prod android && cordova platform add android@10.1.2",
+    "install:ios": "rm -rf ./plugins && ./scripts/create-config-from-template.sh prod ios && cordova platform add ios@6.3.0",
     "remove:android": "cordova platform rm android",
     "remove:ios": "cordova platform rm ios",
     "prebuild:android": "rm -rf ../dist/ && NODE_ENV=production PLATFORM=android ../node_modules/.bin/parcel build ../src/index.prod-android.njk --out-dir ../dist --public-url=./ --detailed-report --no-source-maps --no-cache && ./scripts/create-config-from-template.sh prod android",
