--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -53,6 +53,13 @@ jobs:
             npm run install:android
             npm run build:android
 
+        - name: Upload build artifact
+          if: matrix.platform == 'android'
+          uses: actions/upload-artifact@v2
+          with:
+            name: app-debug.apk
+            path: mtl_solar/mtl_solar/cordova/platforms/android/app/build/outputs/apk/debug/app-debug.apk
+
         - name: Build (iOS)
           if: matrix.platform == 'ios'
           # working-directory: ./cordova
@@ -60,6 +67,13 @@ jobs:
             cd cordova
             npm run install:ios
             npm run build:ios
+
+        - name: Upload build artifact
+          if: matrix.platform == 'ios'
+          uses: actions/upload-artifact@v2
+          with:
+            name: Solar.app
+            path: mtl_solar/mtl_solar/cordova/platforms/ios/build/emulator/Solar.app
 
         # - name: Test
         #   run: npm test -- --no-watch --no-progress --browsers=ChromeHeadless
