--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -37,6 +37,25 @@ jobs:
           with:
             node-version: 20
 
+        - name: Set up JDK 1.8
+          if: matrix.platform == 'android'
+          uses: actions/setup-java@v1
+          with:
+            java-version: 1.8
+
+        - name: Install Android build tools
+          if: matrix.platform == 'android'
+          uses: android-actions/setup-android@v2
+          with:
+            api-level: 30
+            build-tools-version: 30.0.3
+
+        - name: Check Android SDK setup
+          if: matrix.platform == 'android'
+          run: |
+            echo y | sdkmanager --licenses
+            sdkmanager --list
+
         - name: Setup
           # working-directory: ./cordova
           run: |
@@ -69,12 +88,16 @@ jobs:
             npm run install:ios
             npm run build:ios
 
+        - name: Change working directory
+          if: matrix.platform == 'ios'
+          run: cd ./**/ios/build/emulator/
+
         - name: Upload build artifact
           if: matrix.platform == 'ios'
           uses: actions/upload-artifact@v2
           with:
             name: Solar.app
-            path: ./**/ios/build/emulator/Solar.app
+            path: ./Solar.app
 
         # - name: Test
         #   run: npm test -- --no-watch --no-progress --browsers=ChromeHeadless
