--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -46,10 +46,10 @@ jobs:
           with:
             node-version: 20
 
-        - name: Set up JDK 1.7
-          uses: actions/setup-java@v1
-          with:
-            java-version: 1.7
+        # - name: Set up JDK 1.8
+        #   uses: actions/setup-java@v1
+        #   with:
+        #     java-version: 1.8
 
         - name: Install Android build tools
           uses: android-actions/setup-android@v2
