--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -37,7 +37,7 @@ jobs:
             path: ./Solar.app
 
   build-android:
-      runs-on: ubuntu-latest
+      runs-on: macos-latest
       steps:
         - uses: actions/checkout@v4
 
@@ -46,21 +46,24 @@ jobs:
           with:
             node-version: 20
 
-        # - name: Set up JDK 1.8
-        #   uses: actions/setup-java@v1
-        #   with:
-        #     java-version: 1.8
+        - name: setup java
+          uses: actions/setup-java@v4
+          with:
+             java-version: '17'
+             distribution: 'temurin'
 
         - name: Install Android build tools
-          uses: android-actions/setup-android@v2
+          uses: android-actions/setup-android@v3
           with:
-            api-level: 30
-            build-tools-version: 30.0.3
+            packages: |
+              tools platform-tools
+              platforms;android-30
+              build-tools;30.0.3
 
         - name: Check Android SDK setup
           run: |
-            echo y | sdkmanager --licenses
-            sdkmanager --list
+#            echo y | sdkmanager --licenses
+            sdkmanager --list --verbose
 
         - name: Setup
           run: |
