--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -52,14 +52,13 @@ jobs:
              java-version: '17'
              distribution: 'temurin'
 
-        - name: Install Android build tools
+        - name: Install Android SDK
           uses: android-actions/setup-android@v3
           with:
-            cmdline-tools-version: 8512546
-            packages: |
-              platform-tools
-              platforms;android-30
-              build-tools;30.0.3
+            cmdline-tools-version: 11076708
+
+        - name: Install Android SDK packages
+          run: sdkmanager "platforms;android-30" "build-tools;30.0.3"
 
         - name: Check Android SDK setup
           run: |
